--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -1,27 +1,30 @@
 name: Playwright Tests
+
 on:
-  push:
-    branches: [ main, master ]
-  pull_request:
-    branches: [ main, master ]
+  workflow_run:
+    workflows: ["Deploy Hexo to GitHub Pages"]  # Use the name of your Hexo workflow
+    types:
+      - completed
+
 jobs:
   test:
-    timeout-minutes: 60
+    if: ${{ github.event.workflow_run.conclusion == 'success' }}  # Only run if the Hexo workflow succeeded
     runs-on: ubuntu-latest
+
     steps:
-    - uses: actions/checkout@v4
-    - uses: actions/setup-node@v4
+    - name: Checkout Code
+      uses: actions/checkout@v2
+
+    - name: Setup Node.js
+      uses: actions/setup-node@v2
       with:
-        node-version: lts/*
-    - name: Install dependencies
-      run: npm ci
+        node-version: '16'  # Use the appropriate Node.js version
+
+    - name: Install Dependencies
+      run: npm install
+
     - name: Install Playwright Browsers
-      run: npx playwright install --with-deps
-    - name: Run Playwright tests
+      run: npx playwright install --with-deps  # Install all Playwright dependencies and browsers
+
+    - name: Run Playwright Tests
       run: npx playwright test
-    - uses: actions/upload-artifact@v4
-      if: ${{ !cancelled() }}
-      with:
-        name: playwright-report
-        path: playwright-report/
-        retention-days: 30
