--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -1,14 +1,11 @@
 name: Playwright Tests
 
 on:
-  workflow_run:
-    workflows: ["Deploy Hexo to GitHub Pages"]  # Use the name of your Hexo workflow
-    types:
-      - completed
+  repository_dispatch:
+    types: [trigger-playwright-tests]  # Name of the event type sent from Hexo
 
 jobs:
   test:
-    if: ${{ github.event.workflow_run.conclusion == 'success' }}  # Only run if the Hexo workflow succeeded
     runs-on: ubuntu-latest
 
     steps:
@@ -18,7 +15,7 @@ jobs:
     - name: Setup Node.js
       uses: actions/setup-node@v2
       with:
-        node-version: '16'  # Use the appropriate Node.js version
+        node-version: '16'
 
     - name: Install Dependencies
       run: npm install
